# bmkg-wrapper

./: Cargo.toml  README.md  domain_list.json
src/: cuaca.rs  gempa.rs  gempa_wrapper.rs  lib.rs
src/gempa/: autogempa.rs  gempaterkini.rs  mod.rs
