[package]
name = "bmkgw"
version = "0.1.0"
authors = ["yapie <targaryen.akane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
quick-xml = { version = "0.21", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }
